# IceBreakers

./: .env.example  .gitignore  alembic.ini  pyproject.toml  test.db
database/: .env.example  docker-compose.yml
frontend/: eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/docs/: sprint1-frontend.md
frontend/src/: main.tsx
frontend/src/app/: ProtectedRoute.tsx  PublicOnlyRoute.tsx  router.tsx
frontend/src/app/__tests__/: ProtectedRoute.test.tsx
frontend/src/lib/: apiClient.ts  config.ts  errorMessages.ts
frontend/src/styles/: global.css  tokens.css
icebreakers/: config.py  main.py
icebreakers/auth/api/: router.py
icebreakers/auth/application/: service.py
icebreakers/auth/domain/: enums.py  models.py  schemas.py
icebreakers/auth/infrastructure/: repository.py
icebreakers/matching/api/: router.py
icebreakers/matching/application/: service.py
icebreakers/matching/domain/: models.py  schemas.py
icebreakers/matching/infrastructure/: repository.py
icebreakers/meetings/api/: router.py
icebreakers/meetings/application/: service.py
icebreakers/meetings/domain/: enums.py  models.py  schemas.py
icebreakers/meetings/infrastructure/: repository.py
icebreakers/persistence/migrations/: env.py
icebreakers/profile/api/: router.py
icebreakers/profile/application/: service.py
icebreakers/profile/domain/: models.py  schemas.py
icebreakers/profile/infrastructure/: repository.py
icebreakers/shared/: database.py  dependencies.py  rate_limit.py
tests/: conftest.py  test_matching.py  test_meetings.py  test_profile.py
(+63 files in other folders)
